kubernetes/api/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.service: api
    spec:
      containers:
        - env:
            - name: MSSQL_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: mssql-password
                  key: mssql-password
            - name: ConnectionStrings__DefaultConnection
              value: "Server=tcp:mssql,1433;Initial Catalog=RabbitMqDemo;Persist Security Info=False;User ID=sa;Password=$(MSSQL_PASSWORD);Connection Timeout=30;"
            - name: RabbitMQ__Hostname
              valueFrom:
                configMapKeyRef:
                  name: api
                  key: rabbitmq_hostname
            - name: RabbitMQ__Password
              valueFrom:
                secretKeyRef:
                  key: rabbit-password
                  name: rabbit-password
            - name: RabbitMQ__Username
              valueFrom:
                secretKeyRef:
                  key: rabbit-username
                  name: rabbit-username
          image: matthieuf/pubsub-api:1.2
          name: api
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m
          volumeMounts:
            - name: secrets-store
              mountPath: "/mnt/secrets-store"
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "kv-mfolabs"
